# youtube-factory

./: .bashrc  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SETUP.md  docker-compose.yml  kilo.jsonc  list_models.py  project-status.txt  pyproject.toml  test_gemini_image.py  test_hf_image.py  test_vision_crash.py  test_vision_different_images.py
assets/: README.md
base_scripts/: BASE_SCRIPT_GENERATION_SPEC.md  INSTALLATION_README.md  The_Silent_Force_Controlling_Your_Life_Base_Script.md  YOUTUBE_FACTORY_BASE_SCRIPT_CONTEXT.md  download_audio.py  synthetic_valley.md
config/: brand_config.yaml  models-registry.yaml
docs/: ADR-0014_Pipeline_Progress_Reporting_Status_Tracking.md  ARCHITECTURE_AUDIT_2026_07_10.md  ARCHITECTURE_AUDIT_2026_07_12.md  ATMA_THEORY_BRAND_GUIDELINES.md  ATMA_THEORY_MASTER_THUMBNAIL_CONTEXT_v1.md  ATMA_THEORY_MASTER_THUMBNAIL_CONTEXT_v2.md  Atma_Theory_Retention_QA_Build_Spec_FINAL.md  CINEMATIC_DOC_SYNC_PROMPT.md  CLI_REFERENCE.md  MOTION_PLANNER_REUSABILITY_2026_07_13.md  PHASE_1_SETTINGS_SPLIT_PROPOSAL.md  PIPELINE.md  README.md  README_GitHub.md  SETUP.md  SHORTS_FACTORY_SCOPING_SPEC.md  SUBTITLE_ARCHITECTURE.md  TTS_ARCHITECTURE.md  final-gap-fix-prompt.md  fix_scene_plan_persistence_systemically.md  fix_vision_concurrency_tests.md  motion_variety_enhancement_spec.md  pipeline-gap-fix-prompt.md  verify_motion_fix_and_pipeline_sweep.md
research/: command.py  pipeline.py  prompt_builder.py
samples/: test.md  test.txt
scripts/: check_layering.py  test_providers.py
tests/: test_auto_remediation_engine.py  test_benchmark_vision_review.py  test_bgm.py  test_bootstrap.py  test_brand_template_system.py  test_cartesia_provider.py  test_clothing_policy.py  test_contemplative_pacing.py  test_cta_overlay_engine.py  test_deepinfra_provider.py  test_documentary_script_enhancer.py  test_engine_feedback_loop.py  test_human_quality_validation.py  test_image_human_qa.py  test_image_prompt_engine.py  test_image_remediation_orchestrator.py  test_image_review_engine.py  test_incremental.py  test_kokoro_provider.py  test_light_normalization.py  test_local_ai_model_manager.py  test_model_bundle.py  (+21 more)
(+513 files in other folders)
