[project]
name = "youtube-factory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Santosh Parashetti", email = "santu.parashetti@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "edge-tts>=7.2.8",
    "ffmpeg-python>=0.2.0",
    "google-genai>=2.10.0",
    "huggingface-hub>=1.16.1",
    "langdetect>=1.0.9",
    "loguru>=0.7.3",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.27.2.3",
    "pysrt>=1.1.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-slugify>=8.0.4",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "tavily-python>=0.7.26",
    "tenacity>=9.1.4",
    "tiktoken>=0.13.0",
    "typer>=0.26.8",
]

[project.scripts]
ytfactory = "ytfactory.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.30.1",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ytfactory"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["tavily"]
ignore_missing_imports = true
